--- a/style/main.css
+++ b/style/main.css
@@ -94,7 +94,7 @@ li:hover a{
 }
 
 article p{
-    text-align:left;
+    text-align:center;
     display:block;
     padding-right:20px;
     padding-left:20px;
